Add src to leader img to correct html error

--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
       <section class="leader">
         <div class="leader__img-container">
           <img
+            src="./images/mobile/image-interactive.jpg"
             srcset="
               ./images/mobile/image-interactive.jpg  1x,
               ./images/desktop/image-interactive.jpg 2x
