--- a/index.html
+++ b/index.html
@@ -58,9 +58,7 @@
         </div>
         <div class="header__content">
           <h1 class="heading heading--main">
-            Immersive<br />
-            experiences <br />
-            that deliver
+            Immersive experiences that deliver
           </h1>
         </div>
       </header>
