--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <a href="#" class="masthead__logo-wrapper">
             <img
               src="./images/logo.svg"
-              alt="loopstudios logo"
+              alt="Loopstudios - Home"
               class="masthead__logo-img"
             />
           </a>
@@ -91,59 +91,59 @@
         <h2 class="heading heading--secondary">Our creations</h2>
         <div class="card-container">
           <a href="#" class="card card--1">
-            <h3 class="heading heading--card">
+            <p class="heading heading--card">
               Deep<br />
               earth
-            </h3>
+            </p>
           </a>
 
           <a href="#" class="card card--2">
-            <h3 class="heading heading--card">
+            <p class="heading heading--card">
               Night<br />
               arcade
-            </h3>
+            </p>
           </a>
 
           <a href="#" class="card card--3">
-            <h3 class="heading heading--card">
+            <p class="heading heading--card">
               Soccer<br />
               team VR
-            </h3>
+            </p>
           </a>
 
           <a href="#" class="card card--4">
-            <h3 class="heading heading--card">
+            <p class="heading heading--card">
               The<br />
               grid
-            </h3>
+            </p>
           </a>
 
           <a href="#" class="card card--5">
-            <h3 class="heading heading--card">
+            <p class="heading heading--card">
               From up<br />
               above VR
-            </h3>
+            </p>
           </a>
 
           <a href="#" class="card card--6">
-            <h3 class="heading heading--card">
+            <p class="heading heading--card">
               Pocket<br />
               borealis
-            </h3>
+            </p>
           </a>
 
           <a href="#" class="card card--7">
-            <h3 class="heading heading--card">
+            <p class="heading heading--card">
               The<br />
               Curiosity
-            </h3>
+            </p>
           </a>
 
           <a href="#" class="card card--8">
-            <h3 class="heading heading--card">
+            <p class="heading heading--card">
               Make it<br />
               fisheye
-            </h3>
+            </p>
           </a>
         </div>
         <a href="#" class="btn--square">See all</a>
@@ -156,7 +156,7 @@
             alt="loopstudios logo"
             class="footer__logo"
           />
-          <div class="footer__links">
+          <nav class="footer__links" aria-label="footer navigation">
             <ul class="footer__link-list">
               <li class="footer__link-item"><a href="#">About</a></li>
               <li class="footer__link-item"><a href="#">Careers</a></li>
@@ -164,7 +164,7 @@
               <li class="footer__link-item"><a href="#">Products</a></li>
               <li class="footer__link-item"><a href="#">Support</a></li>
             </ul>
-          </div>
+          </nav>
           <div class="footer__socials">
             <a href="#" class="social-icon">
               <img src="./images/icon-facebook.svg" alt="facebook" />
